[package]
name = "hubtain"
version = "0.1.0"
authors = ["Spencer Judge <spencer@xand.me>"]
edition = "2018"

[dependencies]
async-std = { features = ["unstable", "attributes"], version = "1" }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
clap = "2"
crossterm = "0.17"
indicatif = "0.14"
futures = "0.3"
get_if_addrs = "0.5"
rand = "0.7"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"
log = "0.4"
mnemonic = "1.0.1"
x25519-dalek = "0.6"
colored = "1"
lazy_static = "1"
tui = { version =  "0.9", features = ["crossterm"], default_features = false }
# maybe remove
hex = "0.4"
derive_more = "0.99"

[dev-dependencies]
tempfile = "3.1"

[features]
expensive_tests = []
