[package]
name = "hubtain"
version = "0.1.0"
authors = ["Spencer Judge <sushisource@gmail.com>"]
edition = "2018"

[features]
expensive_tests = []

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
async-std = { features = ["unstable", "attributes"], version = "1.5" }
async-trait = "0.1"
atty = "0.2.14"
anyhow = "1.0"
thiserror = "1.0"
crossterm = "0.17"
igd = "0.11"
indicatif = "0.14"
env_logger = "0.7"
futures = "0.3"
get_if_addrs = "0.5"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"
log = "0.4"
mnemonic = "1.0.1"
colored = "1"
lazy_static = "1"
tui = { version =  "0.9", features = ["crossterm"], default_features = false }
derive_more = "0.99"
snow = "0.7.0-alpha4"
pin-utils = "0.1"

[dependencies.clap]
version = "2"
features = ["default", "wrap_help"]

[dev-dependencies]
tempfile = "3.1"
futures_ringbuf = "0.2"
