[package]
name = "hubtain"
version = "0.1.0"
authors = ["Spencer Judge <sjudge@hey.com>"]
edition = "2018"

[features]
expensive_tests = []

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
anyhow = "1.0"
async-std = { features = ["unstable", "attributes"], version = "1.6" }
async-trait = "0.1"
atty = "0.2.14"
bincode = "1.1"
colored = "2"
crossterm = "0.19"
derive_more = "0.99"
env_logger = "0.8"
futures = "0.3"
get_if_addrs = "0.5"
igd = "0.12"
indicatif = "0.15"
lazy_static = "1"
log = "0.4"
mnemonic = "1.0.1"
pin-utils = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snow = { version = "0.7.2", features = ["ring-accelerated"] }
thiserror = "1.0"
tui = { version =  "0.14", features = ["crossterm"], default_features = false }

[dependencies.clap]
version = "2"
features = ["default", "wrap_help"]

[dev-dependencies]
futures_ringbuf = "0.3"
tempfile = "3.1"
